# wtl

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
cmake/: version.cmake  wdk7.cmake
include/hello/: hello.h
include/wtl/: atlapp.h  atlctrls.h  atldlgs.h  atlframe.h  atlprint.h  atlsplit.h  atluser.h  wtltrace.h
src/: export.def  hello.c  main.c  version.rc
test/: hello_test.c
tools/: import-wtl-version.ps1
